no keeper section, add developer overview, change links to our repos

--- a/docs/api/api-endpoints.mdx
+++ b/docs/api/api-endpoints.mdx
@@ -4,16 +4,13 @@ title: API Endpoints
 
 # API Endpoints
 
-## RAI
+## OD
 
 ### Graph Protocol Subgraphs
 
-* Mainnet: [https://thegraph.com/explorer/subgraph/reflexer-labs/rai-mainnet](https://thegraph.com/explorer/subgraph/reflexer-labs/rai-mainnet)&#x20;
-* Kovan: [https://thegraph.com/explorer/subgraph/reflexer-labs/rai-kovan](https://thegraph.com/explorer/subgraph/reflexer-labs/rai-kovan)&#x20;
-* Reflexer hosted Mainnet: [https://subgraph.reflexer.finance/subgraphs/name/reflexer-labs/rai/graphql](https://subgraph.reflexer.finance/subgraphs/name/reflexer-labs/rai/graphql)&#x20;
-* Reflexer hosted Kovan: [https://subgraph-kovan.reflexer.finance/subgraphs/name/reflexer-labs/rai/graphql](https://subgraph-kovan.reflexer.finance/subgraphs/name/reflexer-labs/rai/graphql)&#x20;
-* Mainnet PRAI (deprecated beta): [https://thegraph.com/explorer/subgraph/reflexer-labs/prai-mainnet](https://thegraph.com/explorer/subgraph/reflexer-labs/prai-mainnet)
+* Arbitrum: Coming soon
+* Arbitrum Sepolia: [https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8](https://api.studio.thegraph.com/query/52770/open-dollar---testnet/v1.5.8-rc.8)&#x20;
 
-The subgraph documentation is available on the right panel of[ thegraph.com endpoint ](https://thegraph.com/explorer/subgraph/reflexer-labs/rai-mainnet)
+The subgraph documentation is available in our [od-subgraph](https://github.com/open-dollar/od-subgraph) repository
 
 ![](/assets/selection_436.png)
