--- a/docs/NFT-Vaults-Overview.mdx
+++ b/docs/NFT-Vaults-Overview.mdx
@@ -3,11 +3,11 @@ title: Overview
 description: ''
 ---
 
-![](/img/od-nft-vaults-banner-2.png)\
-Open Dollar NFT Vaults (NFVs) are a new primitive in DeFi and a unique feature of the Open Dollar protocol.\
-\
-These vaults are represented as NFTs, making each vault distinct and transferable. This feature marks a significant evolution from traditional CDPs. Unlike traditional CDPs, where ownership is tied to an account, Open Dollar uses NFVs, which associate ownership of the collateral to NFTs. By doing so, the debt is locked in the protocol, but its ownership is not.\
-![](</img/NFV Flow Diagram.png>)
+<img src="./img/od-nft-vaults-banner-2.png" alt="OD NFT Vaults Banner 2" />
+Open Dollar NFT Vaults (NFVs) are a new primitive in DeFi and a unique feature of the Open Dollar protocol.
+
+These vaults are represented as NFTs, making each vault distinct and transferable. This feature marks a significant evolution from traditional CDPs. Unlike traditional CDPs, where ownership is tied to an account, Open Dollar uses NFVs, which associate ownership of the collateral to NFTs. By doing so, the debt is locked in the protocol, but its ownership is not.
+<img src="./img/NFV Flow Diagram.png" alt="NFV Flow Diagram" />
 
 ## Features
 
