--- a/docs/PID-Controller.mdx
+++ b/docs/PID-Controller.mdx
@@ -2,7 +2,7 @@
 title: PID Controller
 ---
 
-![](/img/PID-Controller.gif)
+<img src="./img/PID-Controller.gif" alt="PID Controller" />
 
 The PID (Proportional-Integral-Derivative) controller within the Open Dollar protocol plays a key role in maintaining the stability of the OD stablecoin.
 
