--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -8,7 +8,7 @@ Platform fees and revenue
 
 50% of the fees from the Open Dollar protocol are used to purchase ODG at auction. Of the ODG purchased, 50% will be allocated to the treasury and 50% will be burned.
 
-![](</img/Platform fees and revenue.png>)
+<img src="./img/Platform fees and revenue.png" alt="Platform fees and revenue" />
 
 ### **Cap Table + Vesting Details**
 
