--- a/docs/NFT-Vaults-Overview.mdx
+++ b/docs/NFT-Vaults-Overview.mdx
@@ -6,13 +6,13 @@ description: ''
 <img src="./img/od-nft-vaults-banner-2.png" alt="OD NFT Vaults Banner 2" />
 Open Dollar NFT Vaults (NFVs) are a new primitive in DeFi and a unique feature of the Open Dollar protocol.
 
-These vaults are represented as NFTs, making each vault distinct and transferable. This feature marks a significant evolution from traditional CDPs. Unlike traditional CDPs, where ownership is tied to an account, Open Dollar uses NFVs, which associate ownership of the collateral to NFTs. By doing so, the debt is locked in the protocol, but its ownership is not.
+On Open Dollar, vaults are represented as NFTs, making each vault distinct and transferable. This feature marks a significant evolution from traditional CDPs. Unlike traditional CDPs, where ownership is tied to an account, Open Dollar uses NFVs, which associate ownership of the collateral and debt to NFTs. 
 <img src="./img/NFV Flow Diagram.png" alt="NFV Flow Diagram" />
 
 ## Features
 
 * ERC-721 standard: NFVs are compatible with all blockchain wallets and NFT marketplaces that support ERC-721.
-* Dynamic display images and metadata: NFV images show the current status, health, collateral, and debt of the vault with time-stamped updates.
+* Dynamic display images and metadata: NFV images show the current status, health, collateral, and debt of the vault with time-stamped updates, and are rendered entirely onchain.
 * Direct Wallet Management: Users can directly manage and track their CDPs from their wallets, bypassing the need for interacting with the protocol's front end.
 * Composability and Cross-Chain Capability: Facilitates easy batch-transfers and asset ownership transfers, along with efficient cross-chain compatibility.
 * Enhanced Visibility and Tracking: Integrates with wallet aggregators and portfolio trackers for dynamic pricing and updated insights.
