--- a/docs/The-ODG-Token---Coming-soon.mdx
+++ b/docs/The-ODG-Token---Coming-soon.mdx
@@ -2,12 +2,13 @@
 title: The ODG Token
 ---
 
-Contract: TBA
-
-Total supply: 10,000,000
+Contract: (Launching January 17th, 2023)
+Initial Total supply: 10,000,000
 
 ### Overview
 
-The ODG token is the governance token of the Open Dollar protocol. It grants holders the right to participate in the governance process, influencing key decisions and the strategic direction of the Open Dollar ecosystem.
+The ODG token is the governance token of the Open Dollar protocol. It grants holders the right to participate in the governance process, influencing key decisions and the strategic direction of the Open Dollar ecosystem. The Protocol treasury is controlled by ODG token holders through a DAO (Decentralized Autonomous Organization).
 
 ODG holders can create proposals, vote, or delegate their voting power to delegates of their choice to steer governance on their behalf.
+
+New ODG tokens can NOT be minted by the DAO, the team, or anyone else. New ODG can only be minted by the protocol autonomously in cases of emergency, when there is bad debt that needs to be settled. Check out the developer docs on the Debt Auction House for more info.
