--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -2,47 +2,24 @@
 title: Tokenomics
 ---
 
-### Tokenomics
+## Tokenomics
 
-Platform fees and revenue
+### Platform fees and revenue
 
-50% of the fees from the Open Dollar protocol are used to purchase ODG at auction. Of the ODG purchased, 50% will be allocated to the treasury and 50% will be burned.
+50% of the fees from the Open Dollar protocol go directly to the DAO controlled treasury. The other 50% are used to purchase ODG at auction, continually acruing value to the ODG token. Of the ODG purchased, 50% will be allocated to the treasury for use in grants, incentives, and community distributions, while 50% will be burned forever.
 
 <img src="./img/Platform fees and revenue.png" alt="Platform fees and revenue" />
 
 ### **Cap Table + Vesting Details**
 
-Early Backers
-
-* 13%
-* 1 year cliff - 24 mo daily vesting
-
-Team
-
-* 24%
-* 1 year cliff - 24 mo daily vesting
-
-Community Rewards
-
-* 30%
-* 3 month cliff - 21 month daily vesting
-
-Genesis airdrop
-
-* 3%
-* No vesting
-
-DAO Treasury
-
-* 15%
-* 1 month cliff - 35 month daily vesting
-
-Liquidity
-
-* 5%
-* No vesting
-
-Reserve
-
-* 10%
-* No vesting
+| Category                        | Initial Percent | Lockup                                        |
+|---------------------------------|-----------------|-----------------------------------------------|
+| DAO Treasury                    | 33.5%           | None                                          |
+| Community Airdrop #1            | 3%              | None                                          |
+| Future Community Distributions  | 7%              | DAO Controlled                                |
+| OpenFi Foundation               | 10%             | Minimum 1 year lock  + 36 months vesting      |
+| Core Team                       | 29.66%          | Minimum 1 year lock  + 24 months vesting      |
+| Initial Team Provided Liquidity | 0.33%           | None (Provided as Liquidity)                  |
+| Future Team                     | 1.66%           | Minimum 1 year lock  + 24 months vesting      |
+| Core Advisors                   | 1.33%           | Minimum 1 year lock  + 24 months vesting      |
+| Investors                       | 13.5%           | Minimum 1 year 20% cliff  + 18 months vesting |
