--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -18,8 +18,8 @@ title: Tokenomics
 | Community Airdrop #1            | 3%              | None                                          |
 | Future Community Distributions  | 7%              | DAO Controlled                                |
 | OpenFi Foundation               | 10%             | Minimum 1 year lock  + 36 months vesting      |
-| Core Team                       | 29.66%          | Minimum 1 year lock  + 24 months vesting      |
-| Initial Team Provided Liquidity | 0.33%           | None (Provided as Liquidity)                  |
-| Future Team                     | 1.66%           | Minimum 1 year lock  + 24 months vesting      |
-| Core Advisors                   | 1.33%           | Minimum 1 year lock  + 24 months vesting      |
-| Investors                       | 13.5%           | Minimum 1 year 20% cliff  + 18 months vesting |
+| Core Team                       | 29.66%          | Minimum 1 year 20% lockup + 24 months vesting |
+| Initial Provided Liquidity      | 0.33%           | None (Provided as Liquidity)                  |
+| Future Team                     | 1.66%           | Minimum 1 year 20% lockup + 24 months vesting |
+| Core Advisors                   | 1.33%           | Minimum 1 year 20% lockup + 24 months vesting |
+| Investors                       | 13.5%           | Minimum 1 year 20% lockup + 12 months vesting |
