--- a/docs/Tokenomics.mdx
+++ b/docs/Tokenomics.mdx
@@ -17,7 +17,7 @@ title: Tokenomics
 | DAO Treasury                    | 33.5%           | None                                          |
 | Community Airdrop #1            | 3%              | None                                          |
 | Future Community Distributions  | 7%              | DAO Controlled                                |
-| OpenFi Foundation               | 10%             | Minimum 1 year lock  + 36 months vesting      |
+| OpenFi Foundation               | 10%             | Minimum 1 year lockup + 36 months vesting     |
 | Core Team                       | 29.66%          | Minimum 1 year 20% lockup + 24 months vesting |
 | Initial Provided Liquidity      | 0.33%           | None (Provided as Liquidity)                  |
 | Future Team                     | 1.66%           | Minimum 1 year 20% lockup + 24 months vesting |
